# mcp-alphafold

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .pre-commit-config.yml  Dockerfile  Makefile  README.md  docker-compose.yml  instruction.md  prompt.md  pyproject.toml  test.py
.github/workflow/: action.yml
.github/workflows/: main.yml
certs/: server.crt  server.key
data/: vaid_fields.json  valid_search_fields.json
src/mcp_alphafold/: __init__.py  __main__.py  cli.py  config.py  http_client.py  main.py  mcp_client.py  mcp_server.py  models.py  prompts.py  server.py  settings.py
src/mcp_alphafold/client/: __init__.py  base.py  chat_handler.py  mcp_client.py  mcp_connection.py  old_client.py  run_client.py  sse_client.py  stdio_client.py
src/mcp_alphafold/docs/: alphafold_prediction.md  alphfold_prediction.md  prompt.md  uniprot_annotation.md  uniprot_annotations.md  uniprot_summary.md
src/mcp_alphafold/server/: mcp_server.py  run_server.py
src/mcp_alphafold/server/tools/: alphafold.py  models.py  utils.py
src/mcp_alphafold/tools/: __init__.py  alphafold.py  base.py  mcp_tools.py  models.py  tools.py  uniprot.py
src/mcp_alphafold/ui/: __init__.py  chat.py
src/mcp_alphafold/utils/: __init__.py  connections.py  doc.py  history_util.py  http.py  http_util.py  tool_util.py  tool_utils.py
tests/: test_mcp_server.py  test_server.py
tests/tools/: test_alphafold.py  test_models.py
tests/utils/: test_doc.py  test_http.py  test_http_util.py  test_tool_util.py
