[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "alphafold-mcp"
version = "0.1.0"
description = "MCP server for AlphaFold."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.49.0",
    "httpx>=0.27.0",
    "pydantic>=1.10",
    "mcp>=1.6.0",
    "diskcache>=5.6.3",
    "platformdirs>=4.3.6",
    "python-dotenv>=1.0.1",
    "streamlit>=1.44.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_alphafold"]

[project.scripts]
mcp-server-alphafold = "mcp_alphafold.main:main"

[tool.uv]
dev-dependencies = [
    "isort>=6.0.1",
    "mypy>=1.9.0",
    "pre-commit>=4.1.0",
    "pyright>=1.1.389",
    "pytest>=8.3.3",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.8.0",
]