[project]
name = "mcp-alphafold"
version = "0.1.0"
description = "AlphaFold MCP server"
authors = [
    { name="Zeinab Sheikhi", email="zeinab.sheykhie@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "diskcache>=5.6.3",
    "httpx>=0.27.0",
    "mcp[cli]>=1.6.0",
    "platformdirs>=4.3.6",
    "pydantic>=1.10",
    "pydantic-settings>=2.0.1",
]

[tool.uv]
dev-dependencies = [
    "isort>=6.0.1",
    "mypy>=1.9.0",
    "pre-commit>=4.1.0",
    "pyright>=1.1.389",
    "pytest>=8.3.3",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx",
    "pytest-asyncio",
    "pytest-mock",
    "pytest-cov>=4.1.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
mcp-alphafold = "mcp_alphafold.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_alphafold"]

[tool.ruff]
line-length = 120
[tool.ruff.lint]
select = [
    "F",  # flake8 rules
    "E",  # pydocstyle error rules
    "W",  # pydocstyle warning rules
    "B",  # flake8-bugbear rules
    "I",  # isort rules
]
ignore = [
    "E501",  # line-too-long
    "F841",  # Unused variable
]

[tool.ruff.format]
indent-style = "space"
quote-style = "double"

[tool.pytest.ini_options]
addopts = "--cov=mcp_alphafold --cov-report=term-missing"
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"


[tool.coverage.run]
source = ["mcp_alphafold"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
]
